Cleaned up prediction with shuffling and fine-tuning
- struggling on error in fine-tuning. Accuracy is almost 0

--- a/one-shot-learning.ipynb
+++ b/one-shot-learning.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 1,
    "metadata": {
     "id": "qaGV91DX1SIf"
    },
@@ -302,6 +302,7 @@
    "cell_type": "markdown",
    "metadata": {
     "id": "Gfa56954O2uM",
+    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -450,11 +451,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
     "def get_embeddings(model, dataloader, dataset_size, batch_size):\n",
+    "    model.eval()\n",
     "    embeddings = torch.tensor([])\n",
     "    \n",
     "    for idx, batch in tqdm(enumerate(dataloader), total=int(dataset_size/batch_size)):\n",
@@ -473,10 +475,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
+    "train_inds = [int(elem[:6])-1 for elem in train_files] #convert file names to indices that start at \"0\"\n",
+    "test_inds = [int(elem[:6])-1 for elem in test_files] #convert file names to indices that start at \"0\"\n",
+    "\n",
     "train_loader = DataLoader(\n",
     "    celeba_dataset,\n",
     "    num_workers=workers,\n",
@@ -484,12 +489,12 @@
     "    sampler=SubsetRandomSampler(train_inds)\n",
     ")\n",
     "\n",
-    "val_loader = DataLoader(\n",
-    "    celeba_dataset,\n",
-    "    num_workers=workers,\n",
-    "    batch_size=batch_size,\n",
-    "    sampler=SubsetRandomSampler(val_inds)\n",
-    ")\n",
+    "# val_loader = DataLoader(\n",
+    "#     celeba_dataset,\n",
+    "#     num_workers=workers,\n",
+    "#     batch_size=batch_size,\n",
+    "#     sampler=SubsetRandomSampler(val_inds)\n",
+    "# )\n",
     "\n",
     "test_loader = DataLoader(\n",
     "    celeba_dataset,\n",
@@ -501,7 +506,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -510,9 +515,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "80it [02:28,  1.85s/it]                        \n",
+      "80it [02:35,  1.95s/it]                        \n"
+     ]
+    }
+   ],
    "source": [
     "train_embeddings, train_labels = get_embeddings(model, train_loader, len(train_files), batch_size)\n",
     "test_embeddings, test_labels = get_embeddings(model, test_loader, len(test_files), batch_size)"
@@ -520,7 +534,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -548,7 +562,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -564,7 +578,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -577,7 +591,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -590,7 +604,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -601,91 +615,46 @@
       "\n",
       "Initial\n",
       "----------\n",
-      "Valid |    16/16   | loss:    9.4096 | fps:  223.4194 | acc:    0.0000   \n",
       "\n",
       "Epoch 1/10\n",
       "----------\n",
-      "Train |    80/80   | loss:    9.3525 | fps:  169.8834 | acc:    0.0000   \n",
+      "Train |    80/80   | loss:    9.3460 | fps:  168.5824 | acc:    0.0000   \n",
       "\n",
       "Epoch 2/10\n",
       "----------\n",
-      "Train |    80/80   | loss:    9.0378 | fps:  169.1900 | acc:    0.0001   \n",
+      "Train |    80/80   | loss:    9.0779 | fps:  164.4324 | acc:    0.0000   \n",
       "\n",
       "Epoch 3/10\n",
       "----------\n",
-      "Train |    80/80   | loss:    8.1761 | fps:  167.0645 | acc:    0.0020   \n",
+      "Train |    80/80   | loss:    8.3457 | fps:  162.8153 | acc:    0.0012   \n",
       "\n",
       "Epoch 4/10\n",
       "----------\n",
-      "Train |    80/80   | loss:    6.9283 | fps:  164.5172 | acc:    0.0148   \n",
+      "Train |    80/80   | loss:    7.1504 | fps:  163.5459 | acc:    0.0091   \n",
       "\n",
       "Epoch 5/10\n",
       "----------\n",
-      "Train |    80/80   | loss:    5.6030 | fps:  166.2083 | acc:    0.0620   \n",
+      "Train |    80/80   | loss:    5.9137 | fps:  163.5980 | acc:    0.0418   \n",
       "\n",
       "Epoch 6/10\n",
       "----------\n",
-      "Train |    80/80   | loss:    3.4869 | fps:  169.4170 | acc:    0.6521   \n",
+      "Train |    80/80   | loss:    3.9023 | fps:  164.3486 | acc:    0.5446   \n",
       "\n",
       "Epoch 7/10\n",
       "----------\n",
-      "Train |    80/80   | loss:    3.1845 | fps:  167.6503 | acc:    0.7796   \n",
+      "Train |    80/80   | loss:    3.6037 | fps:  161.1931 | acc:    0.6858   \n",
       "\n",
       "Epoch 8/10\n",
       "----------\n",
-      "Train |    57/80   | loss:    2.9223 | fps:  168.0489 | acc:    0.8727   "
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Exception ignored in: <bound method _MultiProcessingDataLoaderIter.__del__ of <torch.utils.data.dataloader._MultiProcessingDataLoaderIter object at 0x7f755fef8080>>\n",
-      "Traceback (most recent call last):\n",
-      "  File \"/opt/conda/envs/one-shot-face-recognition/lib/python3.6/site-packages/torch/utils/data/dataloader.py\", line 1328, in __del__\n",
-      "    self._shutdown_workers()\n",
-      "  File \"/opt/conda/envs/one-shot-face-recognition/lib/python3.6/site-packages/torch/utils/data/dataloader.py\", line 1320, in _shutdown_workers\n",
-      "    if w.is_alive():\n",
-      "  File \"/opt/conda/envs/one-shot-face-recognition/lib/python3.6/multiprocessing/process.py\", line 134, in is_alive\n",
-      "    assert self._parent_pid == os.getpid(), 'can only test a child process'\n",
-      "AssertionError: can only test a child process\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Train |    75/80   | loss:    2.9450 | fps:  167.7559 | acc:    0.8643   "
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Exception ignored in: <bound method _MultiProcessingDataLoaderIter.__del__ of <torch.utils.data.dataloader._MultiProcessingDataLoaderIter object at 0x7f755fef8080>>\n",
-      "Traceback (most recent call last):\n",
-      "  File \"/opt/conda/envs/one-shot-face-recognition/lib/python3.6/site-packages/torch/utils/data/dataloader.py\", line 1328, in __del__\n",
-      "    self._shutdown_workers()\n",
-      "  File \"/opt/conda/envs/one-shot-face-recognition/lib/python3.6/site-packages/torch/utils/data/dataloader.py\", line 1320, in _shutdown_workers\n",
-      "    if w.is_alive():\n",
-      "  File \"/opt/conda/envs/one-shot-face-recognition/lib/python3.6/multiprocessing/process.py\", line 134, in is_alive\n",
-      "    assert self._parent_pid == os.getpid(), 'can only test a child process'\n",
-      "AssertionError: can only test a child process\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Train |    80/80   | loss:    2.9537 | fps:  167.1353 | acc:    0.8622   \n",
+      "Train |    80/80   | loss:    3.3857 | fps:  162.6734 | acc:    0.7777   \n",
       "\n",
       "Epoch 9/10\n",
       "----------\n",
-      "Train |    80/80   | loss:    2.7605 | fps:  168.4049 | acc:    0.9099   \n",
+      "Train |    80/80   | loss:    3.1861 | fps:  156.8871 | acc:    0.8425   \n",
       "\n",
       "Epoch 10/10\n",
       "----------\n",
-      "Train |    80/80   | loss:    2.5649 | fps:  166.9937 | acc:    0.9413   \n"
+      "Train |    80/80   | loss:    2.9965 | fps:  161.8908 | acc:    0.8914   \n"
      ]
     }
    ],
@@ -697,12 +666,12 @@
     "\n",
     "print('\\n\\nInitial')\n",
     "print('-' * 10)\n",
-    "model.eval()\n",
-    "training.pass_epoch(\n",
-    "    model, loss_fn, val_loader,\n",
-    "    batch_metrics=metrics, show_running=True, device=device,\n",
-    "    writer=writer\n",
-    ")\n",
+    "# model.eval()\n",
+    "# training.pass_epoch(\n",
+    "#     model, loss_fn, val_loader,\n",
+    "#     batch_metrics=metrics, show_running=True, device=device,\n",
+    "#     writer=writer\n",
+    "# )\n",
     "\n",
     "for epoch in range(epochs):\n",
     "    print('\\nEpoch {}/{}'.format(epoch + 1, epochs))\n",
@@ -715,7 +684,7 @@
     "        writer=writer\n",
     "    )\n",
     "\n",
-    "    # model.eval()\n",
+    "    model.eval()\n",
     "    # training.pass_epoch(\n",
     "    #     model, loss_fn, val_loader,\n",
     "    #     batch_metrics=metrics, show_running=True, device=device,\n",
@@ -727,145 +696,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "80it [00:59,  1.35it/s]                        \n",
-      "80it [00:59,  1.33it/s]                        \n"
+      "80it [01:01,  1.30it/s]                        \n",
+      "80it [01:01,  1.30it/s]                        \n"
      ]
     }
    ],
    "source": [
+    "model.classify = False\n",
     "train_embeddings, train_labels = get_embeddings(model, train_loader, len(train_files), batch_size)\n",
     "test_embeddings, test_labels = get_embeddings(model, test_loader, len(test_files), batch_size)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "tensor([ 661,  751,  197,  ..., 7207, 1727, 2847])"
-      ]
-     },
-     "execution_count": 109,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "x_max = torch.max(test_embeddings, 1)\n",
-    "x_max.indices"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 110,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "tensor([2769, 6462, 8688,  ..., 7203, 8753, 1479])"
-      ]
-     },
-     "execution_count": 110,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "test_labels"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 106,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "tensor([[-1.9315e+00, -2.4994e+00,  1.1724e+00,  ..., -3.1479e+00,\n",
-       "         -2.4919e-01, -1.9545e+00],\n",
-       "        [ 4.3499e-01,  6.8356e-01, -3.6949e+00,  ..., -2.7247e+00,\n",
-       "         -3.6834e+00,  3.2565e+00],\n",
-       "        [ 5.0488e-01, -2.3267e+00, -8.6536e-01,  ...,  3.3571e+00,\n",
-       "          2.0080e-01,  2.8950e+00],\n",
-       "        ...,\n",
-       "        [ 4.2546e-01,  5.8745e-01,  5.8698e+00,  ..., -1.9818e+00,\n",
-       "         -1.2438e+00, -2.1049e+00],\n",
-       "        [ 3.5916e-01, -9.9086e-01,  9.8348e-01,  ..., -1.1922e-01,\n",
-       "         -1.8273e+00,  5.2912e-02],\n",
-       "        [ 1.0629e+00, -6.8456e+00,  8.8256e-01,  ...,  2.6444e+00,\n",
-       "         -1.2878e+00,  2.9885e-03]])"
-      ]
-     },
-     "execution_count": 106,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "train_embeddings"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 100,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def min_norm_2(test_value, trained_examples):\n",
-    "    dists = [(test_value - anchor).norm().item() for anchor in trained_examples]\n",
-    "    return np.argmin(dists)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor(2769)\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "tensor(661)"
-      ]
-     },
-     "execution_count": 101,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "print(test_labels[0])\n",
-    "train_labels[min_norm_2(test_embeddings[0], train_embeddings)]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 97,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Fine-tuned model: Accuracy = 0.006513372150399684.\n"
+      "Fine-tuned model: Accuracy = 0.008881871114181388.\n"
      ]
     }
    ],
