adding training pipeline with triplet loss

--- a/initial_data_load.ipynb
+++ b/initial_data_load.ipynb
@@ -107,9 +107,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "one-shot-face-recognition",
+   "display_name": "Python 3.9.13 ('torch-env')",
    "language": "python",
-   "name": "one-shot-face-recognition"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -121,7 +121,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.9.13"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "915d08fc081d212946bc55eb28a5b744f9509c1c054f3f4f212ad3c247333ef8"
+   }
   }
  },
  "nbformat": 4,
