--- a/single_face_recognition_example.ipynb
+++ b/single_face_recognition_example.ipynb
@@ -671,7 +671,7 @@
       "provenance": []
     },
     "kernelspec": {
-      "display_name": "Python 3.6.13 ('one-shot-face-recognition')",
+      "display_name": "Python 3.9.7 ('tensorflow')",
       "language": "python",
       "name": "python3"
     },
@@ -685,11 +685,11 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.6.13"
+      "version": "3.9.7"
     },
     "vscode": {
       "interpreter": {
-        "hash": "e9597514a15d9b9f9e00f05466d4e27587ef46450885503145645716a45da41a"
+        "hash": "00ea9b24b058b52ddfd814b66c295d92f33896fb5e63699acdc6c6cf43c92435"
       }
     },
     "widgets": {
