--- a/initial_data_load.ipynb
+++ b/initial_data_load.ipynb
@@ -107,9 +107,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.13 ('torch-env')",
+   "display_name": "one-shot-face-recognition",
    "language": "python",
-   "name": "python3"
+   "name": "one-shot-face-recognition"
   },
   "language_info": {
    "codemirror_mode": {
@@ -121,12 +121,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
-  },
-  "vscode": {
-   "interpreter": {
-    "hash": "915d08fc081d212946bc55eb28a5b744f9509c1c054f3f4f212ad3c247333ef8"
-   }
+   "version": "3.6.9"
   }
  },
  "nbformat": 4,
