--- a/one-shot-learning.ipynb
+++ b/one-shot-learning.ipynb
@@ -20,7 +20,7 @@
     {
      "data": {
       "text/plain": [
-       "<torch._C.Generator at 0x7f7dbc69c630>"
+       "<torch._C.Generator at 0x7f254c3fb630>"
       ]
      },
      "execution_count": 1,
@@ -99,12 +99,22 @@
     "## Load the dataset\n",
     "# Path to directory with all the images\n",
     "img_folder = 'data/img_align_celeba'\n",
-    "mapping_file = 'data/identity_CelebA.txt'"
+    "mapping_file_path = 'data/identity_CelebA.txt'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 208,
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mapping_file = pd.read_csv(mapping_file_path, header=None, sep=\" \", names=[\"file_name\", \"person_id\"])\n",
+    "mapping_file['person_id'] = mapping_file['person_id']-1 #decrement labels by 1 to start at 0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {
     "id": "hkdQB_ZODfmw"
    },
@@ -127,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {
     "id": "hkdQB_ZODfmw"
    },
@@ -167,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {
     "id": "-4xtVzckHtgP"
    },
@@ -234,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -248,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 13,
    "metadata": {
     "id": "v1YUbSyeFiwH"
    },
@@ -283,20 +293,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
-    "testset_size = 10000\n",
+    "testset_size = 5000\n",
     "\n",
-    "train_inds = [int(elem[:6])-1 for elem in train_files] #convert file names to indices that start at \"0\"\n",
-    "test_inds = [int(elem[:6])-1 for elem in test_files] #convert file names to indices that start at \"0\"\n",
+    "train_inds = [int(elem[:6])-1 for elem in train_files] #convert file names to indices that start at 0\n",
+    "test_inds = [int(elem[:6])-1 for elem in test_files] #convert file names to indices that start at 0\n",
     "train_inds = train_inds[:-1] # remove last class because leads to problems with batch loader\n",
     "\n",
     "np.random.shuffle(test_inds)\n",
     "val_inds = test_inds[:200]\n",
-    "test_inds = np.random.choice(test_inds[200:], testset_size)\n",
-    "\n",
+    "test_inds = np.random.choice(test_inds[200:], testset_size)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "train_loader = DataLoader(\n",
     "    celeba_dataset,\n",
     "    num_workers=workers,\n",
@@ -519,26 +536,8 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {
-    "tags": []
-   },
-   "source": [
-    "## General Functions"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "tags": []
-   },
-   "source": [
-    "## Training"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -560,14 +559,71 @@
     "tags": []
    },
    "source": [
-    "### Cross Entropy"
+    "## Cross Entropy"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Epoch 1/10\n",
+      "----------\n",
+      "Train |   318/318  | loss:    9.4602 | fps:  355.5362 | acc:    0.0000   \n",
+      "Valid |     1/1    | loss:    7.4287 | fps:   47.2719 | acc:    0.1800   \n",
+      "\n",
+      "Epoch 2/10\n",
+      "----------\n",
+      "Train |   318/318  | loss:    6.3469 | fps:  313.0678 | acc:    0.1276   \n",
+      "Valid |     1/1    | loss:    6.3818 | fps:   82.4115 | acc:    0.1950   \n",
+      "\n",
+      "Epoch 3/10\n",
+      "----------\n",
+      "Train |   318/318  | loss:    3.4590 | fps:  365.1264 | acc:    0.5628   \n",
+      "Valid |     1/1    | loss:    4.9753 | fps:   80.3463 | acc:    0.3800   \n",
+      "\n",
+      "Epoch 4/10\n",
+      "----------\n",
+      "Train |   318/318  | loss:    1.3747 | fps:  345.4451 | acc:    0.9064   \n",
+      "Valid |     1/1    | loss:    4.8693 | fps:   78.0659 | acc:    0.3300   \n",
+      "\n",
+      "Epoch 5/10\n",
+      "----------\n",
+      "Train |   318/318  | loss:    0.5504 | fps:  383.0078 | acc:    0.9656   \n",
+      "Valid |     1/1    | loss:    4.7349 | fps:   82.7201 | acc:    0.3350   \n",
+      "\n",
+      "Epoch 6/10\n",
+      "----------\n",
+      "Train |   318/318  | loss:    0.2415 | fps:  372.9765 | acc:    0.9835   \n",
+      "Valid |     1/1    | loss:    4.4604 | fps:   79.5591 | acc:    0.3950   \n",
+      "\n",
+      "Epoch 7/10\n",
+      "----------\n",
+      "Train |   318/318  | loss:    0.2040 | fps:  322.4135 | acc:    0.9888   \n",
+      "Valid |     1/1    | loss:    4.5699 | fps:   80.8382 | acc:    0.3650   \n",
+      "\n",
+      "Epoch 8/10\n",
+      "----------\n",
+      "Train |   318/318  | loss:    0.2419 | fps:  281.7354 | acc:    0.9823   \n",
+      "Valid |     1/1    | loss:    4.3812 | fps:   82.3337 | acc:    0.4200   \n",
+      "\n",
+      "Epoch 9/10\n",
+      "----------\n",
+      "Train |   318/318  | loss:    0.2232 | fps:  305.4774 | acc:    0.9860   \n",
+      "Valid |     1/1    | loss:    4.6728 | fps:   81.8616 | acc:    0.3500   \n",
+      "\n",
+      "Epoch 10/10\n",
+      "----------\n",
+      "Train |   318/318  | loss:    0.2400 | fps:  360.1247 | acc:    0.9813   \n",
+      "Valid |     1/1    | loss:    4.3236 | fps:   83.3570 | acc:    0.4300   \n"
+     ]
+    }
+   ],
    "source": [
     "epochs = 10\n",
     "loss_fn=torch.nn.CrossEntropyLoss()\n",
@@ -601,14 +657,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 40/40 [02:30<00:00,  3.77s/it]"
+      "100%|██████████| 40/40 [01:37<00:00,  2.44s/it]"
      ]
     },
     {
@@ -616,7 +672,7 @@
      "output_type": "stream",
      "text": [
       "Test Error: \n",
-      " Accuracy: 1.3%, Avg loss: 4.975489 \n",
+      " Accuracy: 1.6%, Avg loss: 4.583959 \n",
       "\n"
      ]
     },
@@ -635,15 +691,35 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Testing\n",
+    "writer = SummaryWriter()\n",
+    "writer.iteration, writer.interval = 0, 10\n",
+    "\n",
+    "model.eval()\n",
+    "test_loss, test_metrics = training.pass_epoch(\n",
+    "    model, loss_fn, test_loader,\n",
+    "    batch_metrics=metrics, show_running=True, device=device,\n",
+    "    writer=writer\n",
+    ")\n",
+    "\n",
+    "writer.close()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Center Loss"
+    "## Center Loss"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 183,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -696,7 +772,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 260,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -783,46 +859,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 266,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
-    "flm = pd.DataFrame.copy(file_label_mapping)\n",
-    "flm = flm.sort_values(by='person_id').groupby('person_id').agg(['count'])\n",
-    "min_15_img_pp_ids = flm[flm['file_name']['count'] > 29].index.values\n",
-    "flm = pd.DataFrame.copy(file_label_mapping)\n",
-    "flm = flm[flm['person_id'].isin(min_15_img_pp_ids)]\n",
+    "# Code to change train files based on desired number of images per person\n",
     "\n",
-    "train_files = get_train_files_for_max_img_per_person(flm, 25)\n",
+    "# flm = pd.DataFrame.copy(file_label_mapping)\n",
+    "# flm = flm.sort_values(by='person_id').groupby('person_id').agg(['count'])\n",
+    "# min_15_img_pp_ids = flm[flm['file_name']['count'] > 29].index.values\n",
+    "# flm = pd.DataFrame.copy(file_label_mapping)\n",
+    "# flm = flm[flm['person_id'].isin(min_15_img_pp_ids)]\n",
     "\n",
-    "train_inds = [int(elem[:6])-1 for elem in train_files] #convert file names to indices that start at \"0\"\n",
-    "\n",
-    "train_loader = DataLoader(\n",
-    "    celeba_dataset,\n",
-    "    num_workers=workers,\n",
-    "    batch_size=128,\n",
-    "    sampler=SubsetRandomSampler(train_inds),\n",
-    "    prefetch_factor=16\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### tempend"
+    "# train_files = get_train_files_for_max_img_per_person(flm, 25)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 261,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
     "lr = 0.01\n",
     "epochs = 20\n",
     "use_gpu = True\n",
-    "loss_fn = center_loss\n",
     "\n",
     "metrics = {\n",
     "    'fps': training.BatchTimer(),\n",
@@ -838,7 +898,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 262,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -849,12 +909,117 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 54,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Epoch 1/20\n",
+      "----------\n",
+      "Train |   318/318  | loss:   12.4062 | fps:  167.7773 | acc:    0.0000   \n",
+      "Valid |     1/1    | loss:   11.7301 | fps:   73.2818 | acc:    0.0000   \n",
+      "\n",
+      "Epoch 2/20\n",
+      "----------\n",
+      "Train |   318/318  | loss:   12.5083 | fps:  165.2262 | acc:    0.0000   \n",
+      "Valid |     1/1    | loss:   12.4321 | fps:   74.4403 | acc:    0.0000   \n",
+      "\n",
+      "Epoch 3/20\n",
+      "----------\n",
+      "Train |   318/318  | loss:   12.5959 | fps:  167.8922 | acc:    0.0000   \n",
+      "Valid |     1/1    | loss:   12.3032 | fps:   72.9697 | acc:    0.0000   \n",
+      "\n",
+      "Epoch 4/20\n",
+      "----------\n",
+      "Train |   318/318  | loss:   12.7032 | fps:  167.6817 | acc:    0.0000   \n",
+      "Valid |     1/1    | loss:   12.3975 | fps:   73.9450 | acc:    0.0000   \n",
+      "\n",
+      "Epoch 5/20\n",
+      "----------\n",
+      "Train |   318/318  | loss:   12.8186 | fps:  166.2747 | acc:    0.0001   \n",
+      "Valid |     1/1    | loss:   12.3532 | fps:   73.7217 | acc:    0.0000   \n",
+      "\n",
+      "Epoch 6/20\n",
+      "----------\n",
+      "Train |   318/318  | loss:   12.8605 | fps:  167.4032 | acc:    0.0000   \n",
+      "Valid |     1/1    | loss:   12.5938 | fps:   74.0856 | acc:    0.0000   \n",
+      "\n",
+      "Epoch 7/20\n",
+      "----------\n",
+      "Train |   318/318  | loss:   12.9280 | fps:  166.3020 | acc:    0.0001   \n",
+      "Valid |     1/1    | loss:   12.2654 | fps:   73.9107 | acc:    0.0000   \n",
+      "\n",
+      "Epoch 8/20\n",
+      "----------\n",
+      "Train |   318/318  | loss:   12.9188 | fps:  166.4134 | acc:    0.0001   \n",
+      "Valid |     1/1    | loss:   12.2567 | fps:   74.6569 | acc:    0.0000   \n",
+      "\n",
+      "Epoch 9/20\n",
+      "----------\n",
+      "Train |   318/318  | loss:   13.0057 | fps:  166.7136 | acc:    0.0000   \n",
+      "Valid |     1/1    | loss:   12.6850 | fps:   74.9576 | acc:    0.0000   \n",
+      "\n",
+      "Epoch 10/20\n",
+      "----------\n",
+      "Train |   318/318  | loss:   13.0232 | fps:  167.1660 | acc:    0.0002   \n",
+      "Valid |     1/1    | loss:   12.5546 | fps:   73.6542 | acc:    0.0000   \n",
+      "\n",
+      "Epoch 11/20\n",
+      "----------\n",
+      "Train |   318/318  | loss:   13.0265 | fps:  166.9186 | acc:    0.0001   \n",
+      "Valid |     1/1    | loss:   12.6339 | fps:   74.3691 | acc:    0.0000   \n",
+      "\n",
+      "Epoch 12/20\n",
+      "----------\n",
+      "Train |   318/318  | loss:   13.1159 | fps:  167.2813 | acc:    0.0000   \n",
+      "Valid |     1/1    | loss:   12.8498 | fps:   74.5984 | acc:    0.0000   \n",
+      "\n",
+      "Epoch 13/20\n",
+      "----------\n",
+      "Train |   318/318  | loss:   13.1139 | fps:  166.0312 | acc:    0.0000   \n",
+      "Valid |     1/1    | loss:   12.6029 | fps:   74.6635 | acc:    0.0000   \n",
+      "\n",
+      "Epoch 14/20\n",
+      "----------\n",
+      "Train |   318/318  | loss:   13.1178 | fps:  166.8806 | acc:    0.0000   \n",
+      "Valid |     1/1    | loss:   12.9253 | fps:   70.2488 | acc:    0.0000   \n",
+      "\n",
+      "Epoch 15/20\n",
+      "----------\n",
+      "Train |   318/318  | loss:   13.1691 | fps:  167.3066 | acc:    0.0001   \n",
+      "Valid |     1/1    | loss:   12.6186 | fps:   74.3838 | acc:    0.0000   \n",
+      "\n",
+      "Epoch 16/20\n",
+      "----------\n",
+      "Train |   318/318  | loss:   13.1765 | fps:  168.4604 | acc:    0.0000   \n",
+      "Valid |     1/1    | loss:   12.9189 | fps:   73.2780 | acc:    0.0000   \n",
+      "\n",
+      "Epoch 17/20\n",
+      "----------\n",
+      "Train |   318/318  | loss:   13.2163 | fps:  167.0668 | acc:    0.0000   \n",
+      "Valid |     1/1    | loss:   13.0108 | fps:   75.2020 | acc:    0.0000   \n",
+      "\n",
+      "Epoch 18/20\n",
+      "----------\n",
+      "Train |   318/318  | loss:   13.3079 | fps:  164.8356 | acc:    0.0002   \n",
+      "Valid |     1/1    | loss:   12.9265 | fps:   74.3607 | acc:    0.0000   \n",
+      "\n",
+      "Epoch 19/20\n",
+      "----------\n",
+      "Train |   318/318  | loss:   13.2166 | fps:  166.4688 | acc:    0.0000   \n",
+      "Valid |     1/1    | loss:   12.9431 | fps:   74.0348 | acc:    0.0000   \n",
+      "\n",
+      "Epoch 20/20\n",
+      "----------\n",
+      "Train |   318/318  | loss:   13.2769 | fps:  166.9819 | acc:    0.0000   \n",
+      "Valid |     1/1    | loss:   12.8393 | fps:   73.9358 | acc:    0.0000   \n"
+     ]
+    }
+   ],
    "source": [
-    "scheduler = MultiStepLR(optimizer, [5, 10])\n",
-    "\n",
     "set_parameter_requires_grad(model=model, feature_extracting=True)\n",
     "model.requires_grad_(True)\n",
     "\n",
@@ -864,7 +1029,7 @@
     "\n",
     "    model.train()\n",
     "    train_loss, train_metrics = pass_epoch_circle_loss(\n",
-    "        model, loss_fn, train_loader, optimizer,\n",
+    "        model, loss_fn, train_loader,\n",
     "        batch_metrics=metrics, show_running=True, device=device,\n",
     "        writer=writer\n",
     "    )\n",
