--- a/celeba_one_shot_train_test_split.ipynb
+++ b/celeba_one_shot_train_test_split.ipynb
@@ -50,7 +50,7 @@
    "source": [
     "## Load the dataset\n",
     "# Path to directory with all the images and mapping\n",
-    "img_folder = 'data/img_align_celeba'\n",
+    "img_folder = 'data/img_align_celeba_mtcnn'\n",
     "mapping_file = 'data/identity_CelebA.txt'\n",
     "\n",
     "# Load the dataset from file\n",
@@ -485,9 +485,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.6.9 ('one-shot-face-recognition')",
+   "display_name": "one-shot-face-recognition",
    "language": "python",
-   "name": "python3"
+   "name": "one-shot-face-recognition"
   },
   "language_info": {
    "codemirror_mode": {
@@ -501,7 +501,6 @@
    "pygments_lexer": "ipython3",
    "version": "3.6.9"
   },
-  "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
     "hash": "f833007afcffe21c80cae9ab338ea0326c55dd31c5b96c817689339d3442c56e"
