--- a/one_shot_learning_triplet_loss.ipynb
+++ b/one_shot_learning_triplet_loss.ipynb
@@ -5320,9 +5320,9 @@
    "provenance": []
   },
   "kernelspec": {
-   "display_name": "one-shot-face-recognition",
+   "display_name": "faceenv",
    "language": "python",
-   "name": "one-shot-face-recognition"
+   "name": "faceenv"
   },
   "language_info": {
    "codemirror_mode": {
@@ -5334,7 +5334,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.8.13"
   },
   "vscode": {
    "interpreter": {
@@ -5343,5 +5343,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 1
+ "nbformat_minor": 4
 }
