--- a/one_shot_better_triplets.ipynb
+++ b/one_shot_better_triplets.ipynb
@@ -200,15 +200,30 @@
     "train_df = flm[flm['is_train']==1]\n",
     "test_df = flm[flm['is_train']==0]\n",
     "\n",
+    "train_df = train_df.sort_values(by=['person_id', 'file_id']) \n",
+    "test_df = test_df.sort_values(by=['person_id', 'file_id']) \n",
+    "\n",
     "train_df.head(3)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from torch.utils.data.sampler import Sampler\n",
+    "\n",
+    "class SubsetSequentialSampler(Sampler):\n",
+    "    def __init__(self, indices):\n",
+    "        self.indices = indices\n",
+    "\n",
+    "    def __iter__(self):\n",
+    "        return (self.indices[i] for i in range(len(self.indices)))\n",
+    "\n",
+    "    def __len__(self):\n",
+    "        return len(self.indices)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -258,73 +273,12 @@
     "        y = torch.cat((y, torch.tensor([pos_label])), dim=0)\n",
     "\n",
     "    return X, y\n",
-    "\n",
-    "class BatchSampler(Sampler[List[int]]):\n",
-    "    r\"\"\"Wraps another sampler to yield a mini-batch of indices.\n",
-    "    Args:\n",
-    "        sampler (Sampler or Iterable): Base sampler. Can be any iterable object\n",
-    "        batch_size (int): Size of mini-batch.\n",
-    "        drop_last (bool): If ``True``, the sampler will drop the last batch if\n",
-    "            its size would be less than ``batch_size``\n",
-    "    Example:\n",
-    "        >>> list(BatchSampler(SequentialSampler(range(10)), batch_size=3, drop_last=False))\n",
-    "        [[0, 1, 2], [3, 4, 5], [6, 7, 8], [9]]\n",
-    "        >>> list(BatchSampler(SequentialSampler(range(10)), batch_size=3, drop_last=True))\n",
-    "        [[0, 1, 2], [3, 4, 5], [6, 7, 8]]\n",
-    "    \"\"\"\n",
-    "\n",
-    "    def __init__(self, sampler: Union[Sampler[int], Iterable[int]], batch_size: int, drop_last: bool) -> None:\n",
-    "        # Since collections.abc.Iterable does not check for `__getitem__`, which\n",
-    "        # is one way for an object to be an iterable, we don't do an `isinstance`\n",
-    "        # check here.\n",
-    "        if not isinstance(batch_size, int) or isinstance(batch_size, bool) or \\\n",
-    "                batch_size <= 0:\n",
-    "            raise ValueError(\"batch_size should be a positive integer value, \"\n",
-    "                             \"but got batch_size={}\".format(batch_size))\n",
-    "        if not isinstance(drop_last, bool):\n",
-    "            raise ValueError(\"drop_last should be a boolean value, but got \"\n",
-    "                             \"drop_last={}\".format(drop_last))\n",
-    "        self.sampler = sampler\n",
-    "        self.batch_size = batch_size\n",
-    "        self.drop_last = drop_last\n",
-    "\n",
-    "    def __iter__(self) -> Iterator[List[int]]:\n",
-    "        # Implemented based on the benchmarking in https://github.com/pytorch/pytorch/pull/76951\n",
-    "        if self.drop_last:\n",
-    "            sampler_iter = iter(self.sampler)\n",
-    "            while True:\n",
-    "                try:\n",
-    "                    batch = [next(sampler_iter) for _ in range(self.batch_size)]\n",
-    "                    yield batch\n",
-    "                except StopIteration:\n",
-    "                    break\n",
-    "        else:\n",
-    "            batch = [0] * self.batch_size\n",
-    "            idx_in_batch = 0\n",
-    "            for idx in self.sampler:\n",
-    "                batch[idx_in_batch] = idx\n",
-    "                idx_in_batch += 1\n",
-    "                if idx_in_batch == self.batch_size:\n",
-    "                    yield batch\n",
-    "                    idx_in_batch = 0\n",
-    "                    batch = [0] * self.batch_size\n",
-    "            if idx_in_batch > 0:\n",
-    "                yield batch[:idx_in_batch]\n",
-    "\n",
-    "    def __len__(self) -> int:\n",
-    "        # Can only be called if self.sampler has __len__ implemented\n",
-    "        # We cannot enforce this condition, so we turn off typechecking for the\n",
-    "        # implementation below.\n",
-    "        # Somewhat related: see NOTE [ Lack of Default `__len__` in Python Abstract Base Classes ]\n",
-    "        if self.drop_last:\n",
-    "            return len(self.sampler) // self.batch_size  # type: ignore[arg-type]\n",
-    "        else:\n",
-    "            return (len(self.sampler) + self.batch_size - 1) // self.batch_size  # type: ignore[arg-type]"
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -454,7 +408,7 @@
        "[20266 rows x 4 columns]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
